# RMA

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  rma-config.cmake.in
data/: concrete.data  heat.data  machine.data  mpg.data
include/: Time.h  argRMA.h  dataRMA.h  driverRMA.h  greedyRMA.h  parRMA.h  paramRMA.h  rma.h  serRMA.h
scripts/: build.sh  build_debug.sh  clean_build.sh  driver.sh  run_rma_1.sh  run_rma_16.sh
src/: Time.h  argRMA.cpp  argRMA.h  baseRMA.cpp  baseRMA.h  dataRMA.cpp  dataRMA.h  driver.cpp  driverRMA.cpp  driverRMA.h  greedyRMA.cpp  greedyRMA.h  main.cpp  parRMA.cpp  parRMA.h  paramRMA.cpp  rma.cpp  serRMA.cpp  serRMA.h  solveRMA.cpp  solveRMA.h  utilRMA.cpp  utilRMA.h  utility.cpp  utility.h
